# tstack

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  CONTRIBUTING.md  DONATIONS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  VERSIONING.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
commands/: architect.md  build.md  design.md  qa.md  review.md  security.md  ship.md
docs/: AGENTIC_OS.md  APPROVAL_ENGINE.md  ARCHITECTURE.md  AUDIT_LOG.md  AUTOMATION_REGISTRY.md  BENCHMARKS.md  BUG_FINDER.md  CAPABILITY_BROKER.md  CAPABILITY_MODEL.md  CONTAINERS.md  CREATION_OS.md  CRYPTOGRAPHY.md  DECISION_BRAIN.md  ENVIRONMENT.md  EVIDENCE_BUNDLE.md  EXECUTION_JOURNAL.md  EXECUTOR.md  FILE_AGENT.md  FILE_RECOVERY.md  FILE_RUNTIME.md  HUMAN_LANGUAGE.md  IMPLEMENTATION_STATUS.md  KNOWLEDGE_GRAPH.md  LEARNING_ENGINE.md  LOCAL_DESKTOP_OS.md  MAINTAINABILITY.md  MASTERY.md  PLUGINS.md  PLUGIN_AUTOMATION.md  RELEASE_CHECK.md  REPRODUCIBLE_BUILDS.md  RUNTIME.md  RUNTIME_AUTHORIZATION.md  RUNTIME_DAEMON.md  RUNTIME_KERNEL.md  SANDBOX.md  SIGNED_SANDBOX_WORKFLOW.md  SSH_AUTOMATION.md  SUPPLY_CHAIN.md  TASK_RUNTIME.md  (+2 more)
docs/rfc/: README.md
knowledge/: README.md  index.json
knowledge/languages/ada/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/apl/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/assembly/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/bash/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/c/: README.md  manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/clojure/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/cobol/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/cpp/: README.md  manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/crystal/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/csharp/: README.md  manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/d/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/dart/: README.md  manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/delphi/: manifest.json  overview.md  performance.md  production.md  security.md  testing.md
knowledge/languages/elixir/: manifest.json  overview.md  performance.md  (+3 more)
src/tstack/: __init__.py  __main__.py  agentic.py  approval.py  audit_log.py  audited_execution.py  automation.py  bug.py  capabilities.py  capability_broker.py  cli.py  container_platform.py  container_sandbox.py  core.py  creation.py  daemon_cli.py  decision.py  decision_cli.py  desktop.py  environment.py  evidence_bundle.py  evidence_cli.py  execution_journal.py  executor.py  file_agent.py  file_recovery.py  file_runtime.py  frameworks.py  graph_cli.py  human_language.py  kernel.py  knowledge.py  knowledge_graph.py  learning.py  learning_cli.py  maintainability.py  mastery.py  plugins.py  policy.py  release_orchestrator.py  (+16 more)
tests/: test_agent_catalog.py  test_agent_orchestration.py  test_agent_selection.py  test_agent_stats.py  test_agentic.py  test_approval.py  test_audit_log.py  test_automation.py  test_bug.py  test_capabilities.py  test_capability_broker.py  test_cli.py  test_container_platform.py  test_container_sandbox.py  test_creation.py  test_decision.py  test_desktop.py  test_dual_hash.py  test_environment.py  test_evidence_bundle.py  test_execution_journal.py  test_executor.py  test_failure_routing.py  test_file_agent.py  test_file_recovery.py  test_file_runtime.py  test_human_language.py  test_kernel.py  test_knowledge_graph.py  test_knowledge_packs.py  test_learning.py  test_legacy_sandbox_disabled.py  test_maintainability.py  test_mastery.py  test_plugins.py  test_policy.py  test_release_orchestrator.py  test_remediation.py  test_reproducibility.py  test_runtime.py  (+11 more)
(+264 files in other folders)
