[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttrl-tstack"
version = "0.3.0"
description = "TTRL's evidence-driven software engineering workflow and project audit CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary until a public license is selected" }
authors = [
  { name = "T Technology Research Lab" }
]
keywords = ["software-engineering", "ai-workflows", "qa", "security", "release", "static-analysis", "project-audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tstack = "tstack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tstack = ["workflows/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
