[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttrl-tstack"
version = "0.6.0"
description = "TTRL evidence-driven engineering workflows, project audits, policy gates, and extensible rule plugins"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary until a public license is selected" }
authors = [{ name = "T Technology Research Lab" }]
keywords = ["software-engineering", "ai-workflows", "qa", "security", "release", "static-analysis", "project-audit", "sarif", "plugins"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tstack = "tstack.cli:main"

[project.entry-points."tstack.rules"]
# Third-party packages register rule plugins in this group.

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tstack = ["workflows/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
